# hubspot-integration

./: .env.example  README.md  pyproject.toml
docs/: demo-script.md
src/cim/: __init__.py  apollo.py  cli.py  config.py  demo_data.py  enrichment.py  hubspot.py  llm.py  server.py
tests/: test_apollo.py  test_enrichment.py  test_hubspot.py  test_llm.py
visual/: app.html  enrichment-demo.html
