[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cim-hubspot-integration"
version = "0.1.0"
description = "HubSpot CRM enrichment engine for Cast Iron Media — AI-powered prospect intelligence"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.21"]
web = ["fastapi>=0.115", "uvicorn>=0.34"]

[project.scripts]
cim = "cim.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/cim"]
